--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lint": "tslint {*,src/**/*,.storybook/**/*}.{js,jsx,ts,tsx}",
     "lint-fix": "npm run lint -- --fix",
     "prettify": "prettier {*,src/**/*,.storybook/**/*}.{js,jsx,ts,tsx,json,css,scss,md,html} --write",
-    "test": "stencil test --spec --e2e",
+    "test": "jest",
     "test.watch": "stencil test --spec --e2e --watchAll"
   },
   "husky": {
@@ -51,7 +51,7 @@
     "@storybook/addon-links": "^4.1.11",
     "@storybook/addon-options": "^4.1.11",
     "@storybook/html": "^4.1.11",
-    "@types/jest": "23.3.13",
+    "@types/jest": "^23.3.13",
     "@types/puppeteer": "1.12.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
@@ -60,8 +60,8 @@
     "html-loader": "^0.5.5",
     "http-proxy-middleware": "^0.19.1",
     "husky": "^1.3.1",
-    "jest": "23.6.0",
-    "jest-cli": "23.6.0",
+    "jest": "^24.0.0",
+    "jest-cli": "^23.6.0",
     "lint-staged": "^8.1.4",
     "marked": "^0.6.0",
     "prettier": "1.16.4",
@@ -78,5 +78,7 @@
     "webpack": "4.28.4"
   },
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {
+    "ts-jest": "^24.0.0"
+  }
 }
