--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@babel/core": "^7.2.2",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
-    "@babel/preset-typescript": "^7.1.0",
+    "@babel/preset-typescript": "^7.3.3",
     "@fortawesome/fontawesome-free": "^5.6.3",
     "@stencil/core": "^0.18.0",
     "@stencil/sass": "^0.1.1",
@@ -79,6 +79,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "ts-jest": "^24.0.0"
+    "source-map-support": "^0.5.10",
+    "ts-jest": "^24.0.0",
+    "ts-node": "^8.0.2"
   }
 }
