--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "lint-staged"
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run lint-fix"
     }
   },
   "lint-staged": {
