--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "jsx": "react",
-    "jsxFactory": "h"
+    "jsxFactory": "h",
+    "sourceMap": false
   },
   "include": ["src", "types/jsx.d.ts"],
   "exclude": ["node_modules"]
